Fixes layout issue where social media links were not rendering on screen.
Removes unnecessary links, adds email address

--- a/portfolio/staticfiles/css/main.css
+++ b/portfolio/staticfiles/css/main.css
@@ -8,24 +8,6 @@
     --y: 0;
 }
 
-.spinner-wrapper{
-    background-color: #000;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.spinner-border{
-    height: 60px;
-    width: 60px;
-}
-
 .fa-brands{
     color: var(--oil_blue);
     padding-right: .7em;
@@ -297,7 +279,6 @@ ul{
 
     #right-section{
         margin-top: 5em;
-        margin-bottom: 5em;
     }
 
 
@@ -412,6 +393,11 @@ ul{
     .build-text{
         color: var(--oil_blue);
         font-size: .8rem;
+    }
+
+    .email-text{
+        color: var(--oil_blue);
+        font-size: 1rem;
     }
 
     .build-link{
